Corrected text alignment in service description

--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -93,7 +93,6 @@
 .home__description {
     max-width: 400px;
     margin-bottom: var(--mb-3);
-    text-align: left;
 }
 
 .home__img {
