--- a/frontend/src/components/services/services.css
+++ b/frontend/src/components/services/services.css
@@ -110,12 +110,13 @@
     display: flex;
     align-items: center;
     column-gap: 0.5rem;
+    justify-content: center;
 }
 
 .services__modal-icon svg {
     display: flex;
-        justify-content: center;
-        align-items: center;
+    justify-content: center;
+    align-items: center;
     color: var(--title-color);
     font-size: 1.1rem;
 }
